--- a/views/pages/fleet/plane/list.ejs
+++ b/views/pages/fleet/plane/list.ejs
@@ -10,7 +10,7 @@
         <table class="display table table-striped table-hover dataTable plane-table">
           <thead>
             <tr>
-              <th>Name</th>
+              <th>Tail Number</th>
               <th>Pilot </th>
               <th>Air Craft Type</th>
               <th>Total Capacity</th>
