--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -276,6 +276,5 @@
   </div>
 </div>
 
-<script src="https://unpkg.com/file-upload-with-preview@4.0.2/dist/file-upload-with-preview.min.js"></script>
-<% block('scripts').append('<script src="/assets/js/plugin/datatables/datatables.min.js"></script>')%>
+<% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/awb/create.js"></script>')%>
