Printer API Added

--- a/views/pages/account/change-pass.ejs
+++ b/views/pages/account/change-pass.ejs
@@ -39,4 +39,5 @@
 	</form>
 </div>
 
+<% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/account/change-password.js"></script>')%>
