--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -114,8 +114,7 @@
               <table id='packageTable' class='display table table-striped table-hover w-100'>
                 <thead>
                   <tr>
-                    <td><strong>Tracking No</strong></td>
-                    <td class="text-center"><strong>Description</strong></td>
+                    <td><strong>Description</strong></td>
                     <td class="text-center"><strong>Dimension</strong></td>
                     <td class="text-right"><strong>Weight</strong></td>
                     <td></td>
@@ -143,10 +142,6 @@
     <div class="card-body">
       <div class='form-group'>
         <button type='button' class="btn btn-small btn-info btn-copy-last">Copy Last Package</button>
-      </div>
-      <div class='form-group'>
-        <label for="trackingNo">Tracking #</label>
-        <input type='text' class='form-control' id='trackingNo' name='trackingNo' required />
       </div>
       <div class='form-group'>
         <label for="description">Description</label>
