--- a/views/pages/warehouse/awb/preview.ejs
+++ b/views/pages/warehouse/awb/preview.ejs
@@ -5,8 +5,8 @@
     <div class="row align-items-center">
       <div class="ml-auto mr-3 mb-3 mt--4">
         <a class="btn btn-danger btn-round text-white" href="/warehouse/download-pdf/awb/<%=awb.id%>"> Download PDF</a>
-        <a class="btn btn-danger btn-round text-white ml-2 btn-print-awb"> Print AWB </a>
-        <a class="btn btn-danger btn-round text-white ml-2 btn-print-labels"> Print All Labels </a>
+        <a class="btn btn-danger btn-round text-white ml-2 btn-print-awb" data-toggle="modal" data-id="<%=awb.id%>"
+          data-target="#print-popup"> Print AWB </a>
       </div>
     </div>
     <div class="row">
@@ -147,6 +147,29 @@
             </p>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="print-popup" tabindex="-1" role="dialog" aria-labelledby="print-popup" aria-hidden="true"
+  style="display: none;">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title" id="exampleModalLabel2">Print AirWay Bill</h2>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group text-center">
+          <canvas id="pdf-preview" class="border border-dark w-100"></canvas>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary print-awb" id='print-awb'>Print</button>
       </div>
     </div>
   </div>
