--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -16,6 +16,7 @@
               <th>Weight</th>
               <th>Dimensions</th>
               <th>AWB</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -27,10 +28,37 @@
               <td><%= pkg.weight%></td>
               <td><%= pkg.dimensions %></td>
               <td><%= pkg.awbId %></td>
+              <td class="text-center">
+                <a class="btn btn-link btn-primary btn-print-pkg" data-toggle="modal" data-id="<%=pkg.id%>"
+                  data-original-title="Print Label" data-target="#print-popup"> <i class="fa fa-print"></i> </a>
+              </td>
             </tr>
             <%})%>
           </tbody>
         </table>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="print-popup" tabindex="-1" role="dialog" aria-labelledby="print-popup" aria-hidden="true"
+  style="display: none;">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title" id="exampleModalLabel2">Print Package Label</h2>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group text-center">
+          <canvas id="pdf-preview" class="border border-dark"></canvas>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary print-package" id='print-package'>Print</button>
       </div>
     </div>
   </div>
