--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -161,6 +161,12 @@
 	<!-- File Upload Preview -->
 	<script src="https://unpkg.com/file-upload-with-preview@4.0.2/dist/file-upload-with-preview.min.js"></script>
 
+	<!-- PDF Viewwer -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.3.200/pdf.min.js"></script>
+
+	<!-- Printer -->
+	<script src="/assets/js/plugin/print/print.min.js"></script>
+
 	<%- block('scripts').toString() %>
 
 	<script>
@@ -213,44 +219,44 @@
 			styleText: true
 		})
 
-		var totalIncomeChart = document.getElementById('totalIncomeChart').getContext('2d');
+		// var totalIncomeChart = document.getElementById('totalIncomeChart').getContext('2d');
 
-		var mytotalIncomeChart = new Chart(totalIncomeChart, {
-			type: 'bar',
-			data: {
-				labels: ["S", "M", "T", "W", "T", "F", "S", "S", "M", "T"],
-				datasets: [{
-					label: "Total Income",
-					backgroundColor: '#ff9e27',
-					borderColor: 'rgb(23, 125, 255)',
-					data: [6, 4, 9, 5, 4, 6, 4, 3, 8, 10],
-				}],
-			},
-			options: {
-				responsive: true,
-				maintainAspectRatio: false,
-				legend: {
-					display: false,
-				},
-				scales: {
-					yAxes: [{
-						ticks: {
-							display: false //this will remove only the label
-						},
-						gridLines: {
-							drawBorder: false,
-							display: false
-						}
-					}],
-					xAxes: [{
-						gridLines: {
-							drawBorder: false,
-							display: false
-						}
-					}]
-				},
-			}
-		});
+		// var mytotalIncomeChart = new Chart(totalIncomeChart, {
+		// 	type: 'bar',
+		// 	data: {
+		// 		labels: ["S", "M", "T", "W", "T", "F", "S", "S", "M", "T"],
+		// 		datasets: [{
+		// 			label: "Total Income",
+		// 			backgroundColor: '#ff9e27',
+		// 			borderColor: 'rgb(23, 125, 255)',
+		// 			data: [6, 4, 9, 5, 4, 6, 4, 3, 8, 10],
+		// 		}],
+		// 	},
+		// 	options: {
+		// 		responsive: true,
+		// 		maintainAspectRatio: false,
+		// 		legend: {
+		// 			display: false,
+		// 		},
+		// 		scales: {
+		// 			yAxes: [{
+		// 				ticks: {
+		// 					display: false //this will remove only the label
+		// 				},
+		// 				gridLines: {
+		// 					drawBorder: false,
+		// 					display: false
+		// 				}
+		// 			}],
+		// 			xAxes: [{
+		// 				gridLines: {
+		// 					drawBorder: false,
+		// 					display: false
+		// 				}
+		// 			}]
+		// 		},
+		// 	}
+		// });
 
 		$('#lineChart').sparkline([105, 103, 123, 100, 95, 105, 115], {
 			type: 'line',
