--- a/views/pages/warehouse/awb/preview.ejs
+++ b/views/pages/warehouse/awb/preview.ejs
@@ -164,7 +164,7 @@
       </div>
       <div class="modal-body">
         <div class="form-group text-center">
-          <canvas id="pdf-preview" class="border border-dark w-100"></canvas>
+          <canvas id="pdf-preview" class="border border-dark"></canvas>
         </div>
       </div>
       <div class="modal-footer">
